Building recipe page as part of learning 4th December version2 dec26

--- a/recipes/potatoes.html
+++ b/recipes/potatoes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ugali Recipe</title>
+    <title>Potate Salad Recipe</title>
 </head>
 <body>
     <h1>Old Fashioned Potato Salad</h1>
