--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-
-    <p><a href="recipes/potatoes.html">Old Fashioned Potato Salad</a></p>
+    <ul>
+        <li><a href="recipes/potatoes.html">Old Fashioned Potato Salad</a></li>
+        <li><a href="recipes/chocolate.html">Chocolate Thumbprint Cookies</a></li>
+        <li><a href="recipes/airfryer.html">Air Fryer Latkes</a></li>
+    </ul>
     
 </body>
 </html>
