Building recipe page as part of learning 4th December version2 dec26 ver2

--- a/recipes/airfryer.html
+++ b/recipes/airfryer.html
@@ -28,5 +28,7 @@
         <li>Spray the air fryer basket with cooking spray. Carefully place half of the patties in the basket and spray generously with cooking spray.</li>
         <li>Air-fry until crispy and dark golden brown on the outside, 10 to 12 minutes. (Check for doneness at 8 minutes if you prefer a softer latke.) Remove latkes to a plate. Repeat with remaining patties, spraying them with cooking spray before cooking.</li>
     </ol>
+    <p></p>
+    <p><a href="../index.html">Return Home</a></p>
 </body>
 </html>
