--- a/recipes/chocolate.html
+++ b/recipes/chocolate.html
@@ -38,8 +38,10 @@
         <li>Bake in preheated oven in upper and lower thirds, 2 baking sheets at a time, rotating top to bottom and bottom to top halfway through, until cookies are set and almost firm, 8 to 10 minutes.</li>
         <li>Let cool on baking sheets, about 15 minutes. When cool, press the center of each ball with your thumb again—the indentations will have puffed in the oven.</li>
         <li>Heat cream in a small microwavable bowl on HIGH until just steaming, about 45 seconds. Remove from the heat, and add chopped chocolate. Let the mixture sit, undisturbed, for 2 minutes. Stir until melted and smooth. Let cool until slightly thickened, about 5 minutes. Place about 1 teaspoon filling in the center of each cookie. Slide the cookies into the refrigerator for about 10 minutes to set the filling. The cookies will keep for about 5 days in an airtight container at room temperature.</li>
-        
+
     </ol>
+    <p></p>
+    <p><a href="../index.html">Return Home</a></p>
     
 </body>
 </html>
