--- a/recipes/potatoes.html
+++ b/recipes/potatoes.html
@@ -31,6 +31,8 @@
             <li>Step 3: Combine the potatoes, eggs, celery, onion, relish, mayonnaise, mustard, garlic salt, celery salt, and pepper in a large bowl. Mix together well and refrigerate until chilled.</li>
 
         </ol>
+        <p></p>
+        <p><a href="../index.html">Return Home</a></p>
    </div>
 </body>
 </html>
