--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Odin Recipe</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Aklei Recipes</h1>
+    <img src="https://plus.unsplash.com/premium_photo-1661658665860-443394a2df9d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1492&q=80" loading="lazy">
     <ul>
         <li><a href="recipes/potatoes.html">Old Fashioned Potato Salad</a></li>
         <li><a href="recipes/chocolate.html">Chocolate Thumbprint Cookies</a></li>
